--- a/중간보고/2018100233_TermProject_Interim_Report.ipynb
+++ b/중간보고/2018100233_TermProject_Interim_Report.ipynb
@@ -13,7 +13,7 @@
    "id": "a914dc28",
    "metadata": {},
    "source": [
-    "<h2> 주제: 코로나19 전후 서울특별시 실내 헬스장 흥행 현황 분석 </h2>"
+    "<h2> 주제: 코로나19 전후 지역별 실내 헬스장 흥행 현황 분석 </h2>"
    ]
   },
   {
@@ -37,15 +37,86 @@
    "id": "d136c37d",
    "metadata": {},
    "source": [
-    "* ``코로나19``로 인한 영업시간 제한 및 사적모임 인원 제한 때문에 실내 체육시설업 자영업자들이 힘든 시기를 보냈다. <br>\n",
-    "* 하지만 오히려 점점 실내 체육시설의 인기는 늘어가고 있다고 생각한다.\n",
-    "* 사람들은 거리두기로 인한 스트레스를 풀 방법으로 ``혼자 할 수 있는 운동``을 찾았다. <br>\n",
-    "* 코로나가 장기화되면서, 헬스장은 오히려 활기를 띠기 시작했다. <br>\n",
-    "* 개인적으로 느끼기에, 사람들이 코로나19 이전에는 축구, 농구 등 ``단체 종목``의 운동을 비교적 선호했던 것 같다. <br>\n",
-    "* 그런데 이제 주변을 둘러보면, 단체 운동 못지 않게 헬스를 하는 사람들이 많아졌다. <br>\n",
-    "* 헬스장에 직접 가보면, 과거와 달리 ``여성 회원``들도 상당수 많이 늘어났다. <br>\n",
-    "* 이제는 헬스가 대세라는 생각도 자주 했다. <br>\n",
-    "* 위의 내용들은 2020년부터 계속해서 생각해왔던 것들이다. 하지만 어디까지나 ``생각 혹은 추측``일 뿐, 데이터에 의해 검증된 내용이 아니다.\n",
+    "* ``코로나19``로 인한 영업시간 제한 및 사적모임 인원 제한 때문에 실내 체육시설업 자영업자들이 힘든 시기를 보냈다. \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50d1f5cc",
+   "metadata": {},
+   "source": [
+    "* 하지만 오히려 점점 실내 체육시설의 인기는 늘어가고 있다고 생각한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a861465",
+   "metadata": {},
+   "source": [
+    "* 사람들은 거리두기로 인한 스트레스를 풀 방법으로 ``혼자 할 수 있는 운동``을 찾았다. <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "877add6c",
+   "metadata": {},
+   "source": [
+    "* 코로나가 장기화되면서, 헬스장은 오히려 활기를 띠기 시작했다. <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3712554",
+   "metadata": {},
+   "source": [
+    "* 개인적으로 느끼기에, 사람들이 코로나19 이전에는 축구, 농구 등 ``단체 종목``의 운동을 비교적 선호했던 것 같다. <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "963c7b46",
+   "metadata": {},
+   "source": [
+    "* 그런데 이제 주변을 둘러보면, 단체 운동 못지 않게 헬스를 하는 사람들이 많아졌다. <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2cb48fc",
+   "metadata": {},
+   "source": [
+    "* 헬스장에 직접 가보면, 과거와 달리 ``여성 회원``들도 상당수 많이 늘어났다. <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81cd7662",
+   "metadata": {},
+   "source": [
+    "* 이제는 헬스가 대세라는 생각도 자주 했다. <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89cc9016",
+   "metadata": {},
+   "source": [
+    "* 위의 내용들은 2020년부터 계속해서 생각해왔던 것들이다. 하지만 어디까지나 ``생각 혹은 추측``일 뿐, 데이터에 의해 검증된 내용이 아니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c0b3372",
+   "metadata": {},
+   "source": [
     "* 그래서 오랫동안 머릿속으로 생각만 해왔던 주제를 데이터로 검증해보고 싶어서 선정하였다."
    ]
   },
@@ -91,6 +162,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "91e489e5",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8b217802",
    "metadata": {},
    "source": [
@@ -102,7 +181,7 @@
    "id": "5275d045",
    "metadata": {},
    "source": [
-    "* 획득: ``서울 열린데이터광장``(https://data.seoul.go.kr/dataList/OA-16142/A/1/datasetView.do) 에서 '서울시 체력단련장업 인허가 정보.csv'를 다운로드한 뒤, pandas를 활용해서 csv를 pandas의 DataFrame으로 불러왔다"
+    "* 획득: ``DATA.GO.KR``(https://www.data.go.kr/data/15045048/fileData.do) 에서 'fulldata_10_42_01_P_체력단련장업.csv'를 다운로드한 뒤, pandas를 활용해서 csv를 pandas의 DataFrame으로 불러왔다"
    ]
   },
   {
@@ -118,7 +197,15 @@
    "id": "d447375c",
    "metadata": {},
    "source": [
-    "* 수정사항: 제안서에서는 ``경기데이터드림``(https://data.gg.go.kr/portal/data/service/selectServicePage.do?infId=W79O75LJ92OZ3P30IFST755934&infSeq=1) 에서 '체력단련장업체현황.csv파일'까지 활용해서 두 csv를 병합해서 수도권 헬스장 정보를 토대로 분석할 계획이었지만, 경기도의 정보는 최종 수정일자가 '2022-04-27'이기 때문에 분석에서 제외됐다. 매일 최신화되는 '서울시 체력단련장업 인허가 정보.csv'과 최신화 일자가 3개월 이상 차이나는 csv 파일을 병합하는 것은 분석대상의 일관성을 해치는 것이라고 생각했다."
+    "* 수정사항: 제안서에서는 ``경기데이터드림``과 ```서울열린데이터광장``` 에서 경기도와 서울의 헬스장 현황을 담은 csv 파일들을 다운로드 받은 뒤, 병합해서 수도권 헬스장 정보를 토대로 분석할 계획이었지만, ```DATA.GO.KR```에서 전국 헬스장을 대상으로 한 csv 파일을 얻을 수 있어서 해당 csv 파일로 데이터 분석을 진행했다. <br>웹상에서는(https://www.data.go.kr/data/15045048/fileData.do) 최근 수정일이 '2021-11-19'으로 나와있지만, csv 파일을 열어보면 '2022-10-31'까지 최신화된 것을 알 수 있었다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93bdb5ff",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -144,17 +231,34 @@
    "id": "662f5ef8",
    "metadata": {},
    "source": [
-    "* 가공된 csv를 다시 DataFrame으로 불러온 뒤에, 폐업, 전출, 휴업, 취소, 말소 여부를 1과 0으로 나타내는 '폐업,전출,휴업,취소,말소여부' 컬럼을 생성했다. \n",
-    "* 해당하는 컬럼의 밸류는 각 행마다 '인허가취소일자', '폐업일자', '휴업시작일자' 컬럼 중 하나라도 결측치가 아니면 1을, 모두 결측치라면 0을 입력한다."
+    "* 가공된 csv를 다시 DataFrame(df1)으로 불러온 뒤에, 폐업, 휴업, 취소, 말소, 만료, 정지 등의 여부를 1과 0으로 나타내는 '폐업,전출,휴업,취소,말소여부' 컬럼을 생성했다. \n",
+    "* 해당하는 컬럼의 밸류는 각 행마다 '인허가취소일자', '폐업일자', '휴업시작일자' 컬럼 중 하나라도 결측치가 아니면 1을, 모두 결측치라면 0을 입력한다.\n",
+    "* 폐업, 전출, 휴업, 취소, 말소 여부는 인허가취소일자, 휴업시작일자, 폐업일자 중 하나라도 결측치가 아니라면 해당하는 것을 알 수 있다. 세 컬럼이 모두 결측치라면, 정상적으로 영업 중인 업장에 해당한다. <br>\n",
+    "```df1 = pd.read_csv('헬스장현황_가공.csv', encoding='cp949')``` <br>\n",
+    "```df1['폐업,전출,휴업,취소,말소여부'] = np.where(df1['인허가취소일자'].notnull() | df1['휴업시작일자'].notnull() | df1['폐업일자'].notnull(), 1, 0)```\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6e5ac885",
+   "id": "eeed85fa",
    "metadata": {},
    "source": [
-    "* 이후에 '인허가취소일자', '폐업일자', '휴업시작일자' 컬럼 중 결측치가 아닌 값이 있으면 추출하는 '폐업,전출,휴업,취소,말소연도' 컬럼을 생성했다. <br>\n",
-    "```df1.loc[:, '폐업,전출,휴업,취소,말소연도'] = df1.loc[:, ['인허가취소일자', '폐업일자', '휴업시작일자']].max(axis=1)```"
+    "* read_csv로 csv 파일을 읽어올 때, Unnamed: 0 컬럼이 의도치않게 생성된다. 따라서 이 컬럼을 삭제했다. <br>\n",
+    "```df1.drop(['Unnamed: 0'], axis = 1, inplace = True)```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d49847cc",
+   "metadata": {},
+   "source": [
+    "* 연도 및 월별로 지역에 따라서 신규 인허가 업장과 폐업, 휴업, 취소, 말소, 만료, 정지 등의 상태인 업장의 수를 시각화해야하기 때문에 날짜에 관련된 컬럼들로부터 연도와 월만을 추출해야 한다. \n",
+    "* 우선 인허가일자의 연도와 월을 추출했다.\n",
+    "```df1['인허가연월'] = df1['인허가일자'].dt.to_period('M')```\n",
+    "* 이후에 '인허가취소일자', '폐업일자', '휴업시작일자' 컬럼 중 결측치가 아닌 값이 있으면 추출하는 '폐업,전출,휴업,취소,말소연도' 컬럼을 생성했다. 만약 세 컬럼이 모두 결측치를 가지는 행이라면, '폐업,전출,휴업,취소,말소연도' 컬럼도 결측치를 가진다. <br>\n",
+    "```df1.loc[:, '폐업,전출,휴업,취소,말소연도'] = df1.loc[:, ['인허가취소일자', '폐업일자', '휴업시작일자']].max(axis=1)```\n",
+    "* 이제 '폐업,전출,휴업,취소,말소연도' 컬럼에서 연도와 월을 추출한 '폐업,전출,휴업,취소,말소연월' 컬럼을 생성했다.\n",
+    "```df1['폐업,전출,휴업,취소,말소연월'] = df1['폐업,전출,휴업,취소,말소연도'].dt.to_period('M')```"
    ]
   },
   {
@@ -162,8 +266,16 @@
    "id": "33f42a03",
    "metadata": {},
    "source": [
-    "* <strong> 최종적으로 DataFrame은 '사업장명', '인허가일자', '인허가취소일자', '휴업시작일자', '휴업종료일자', '폐업일자', '상세영업상태코드', '상세영업상태명', '도로명주소', '지번주소', '폐업,전출,휴업,취소,말소여부', '폐업,전출,휴업,취소,말소연도'의 컬럼을 가지게 된다. <br>\n",
-    "이를 바탕으로 matplotlib을 활용해서 연도별 추이를 시각화할 계획이다.</strong>"
+    "* <strong> 최종적으로 DataFrame은 '사업장명', '인허가일자', '인허가취소일자', '휴업시작일자', '휴업종료일자', '폐업일자', '영업상태명', '도로명전체주소', '폐업,전출,휴업,취소,말소여부','인허가연월', '폐업,전출,휴업,취소,말소연도','폐업,전출,휴업,취소,말소연월'의 컬럼을 가지게 된다. <br>\n",
+    "이를 바탕으로 matplotlib을 활용해서 연월별 지역별 추이를 시각화할 계획이다.</strong>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e5ac885",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -180,24 +292,6 @@
    "id": "1fc00c28",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d46a83a0",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6ac311b5",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d363c669",
-   "metadata": {},
    "source": []
   }
  ],
